--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
                     </p>
                 </div>
             </div> <!-- mission content wrapper ends -->
-        </section> <!-- contact-info -->
+        </section> 
 
           <!--Google map of location-->
         <section class="map">
@@ -62,7 +62,7 @@
               </figure>
         </section>
 
-          <!--Info e-mails-->
+          <!--contact info e-mails-->
         <section class="contact-section">
             <div class="content-wrapper">
               <h2>Contact us, because you all need this.</h2>
