--- a/faq/index.html
+++ b/faq/index.html
@@ -42,8 +42,7 @@
         <section class="faq">
             <div class="content-wrapper">
               <h2>Frequently Asked Questions</h2>  
-              <div class="faq-content">
-                  <div>
+                  <div class="faq-content">
                     <h4>How do I get to the Unplugged retreat?</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -51,7 +50,7 @@
                     </p>
                   </div>
 
-                  <div>
+                  <div class="faq-content">
                     <h4>What kind of team is right for the Unplugged retreat?</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -59,7 +58,7 @@
                     </p>
                   </div>
 
-                  <div>
+                  <div class="faq-content">
                     <h4>What size teams can you accommodate?</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -67,15 +66,14 @@
                     </p>
                   </div>
 
-                  <div>
+                  <div class="faq-content">
                     <h4>Is there really no wifi available?</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                       Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
                     </p>
-                  </div>
-
-              </div> <!-- FAQ content ends-->
+                  </div> 
+                  <!-- FAQ content ends-->
             </div> <!-- FAQ content wrapper ends -->
         </section> 
 
