--- a/index.html
+++ b/index.html
@@ -60,41 +60,52 @@
           </aside>
           
           <section class="features">
-            <div class="features-description">
-              <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
-            </div>
-
             <div class="content-wrapper">
+              <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+              <div class="features-items">
                 <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+                  <p class="fontawesome-icon">
+                  </p>
+                  <p class="features-item-description">
+                    Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+                  </p>
                 </article>
-
                 <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">12 private rooms, with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+                  <p class="fontawesome-icon">
+                  </p>
+                  <p class="features-item-description">
+                    12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+                  </p>
                 </article>
-
                 <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+                  <p class="fontawesome-icon">
+                  </p>
+                  <p class="features-item-description">
+                    Private chef team providing on demand meals - just like your team kitchen.
+                  </p>
                 </article>
-
                 <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-                </article>  
-                
+                  <p class="fontawesome-icon">
+                  </p>
+                  <p class="features-item-description">
+                    5 outdoor obstacle courses, including private beach ½ mile from bungalow.
+                  </p>
+                </article>
                 <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-                </article> 
-
+                  <p class="fontawesome-icon">
+                  </p>
+                  <p class="features-item-description">
+                    Retreat facilitator to manage your day to day activities so you all get a chance to reset.
+                  </p>
+                </article>
                 <article>
-                  <p class="fontawesome-icon"></p>
-                  <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-                </article> 
-
+                  <p class="fontawesome-icon">
+                  </p>
+                  <p class="features-item-description">
+                    Dedicated computer room for times that you must wifi.
+                  </p>
+                </article>
+              </div>
             </div>
           </section>
 
