--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 
       <header>
           <div class="content-wrapper">
-              <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+              <figure>
+                <a href="#">
+                    <img src="img/unpluggedlogo.png" alt="unplugged logo">
+                </a>
+              </figure>  
+      
               <div class="header-divider"></div>
                 <nav>
                     <ul>
@@ -116,7 +121,10 @@
             <div class="content-wrapper">
                 <h2>Be a better team in 5 days, like these.</h2>
                 <article>
-                    <div>
+                  <figure>
+                    <img src="img/team-img.jpg" alt="image of a team" />
+                  </figure>  
+                  <div>
                       <h3>LaCrue Bottling Co. October 2018</h3>
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
