--- a/faq/index.html
+++ b/faq/index.html
@@ -18,6 +18,8 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <!-- Font Awesome link-->
+  <script src="https://kit.fontawesome.com/186639d764.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
@@ -30,7 +32,7 @@
       <header>
         <div class="content-wrapper">
             <figure>
-              <a href="#">
+              <a href="../index.html">
                   <img src="../img/unpluggedlogo.png" alt="unplugged logo">
               </a>
             </figure> 
