--- a/about/index.html
+++ b/about/index.html
@@ -112,13 +112,13 @@
                   <h3>Social</h3>
                     <div class="social-icons">
                         <p>
-                          <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+                          <a href="https://www.facebook.com/yoursite" target="_blank"><i class="fab fa-facebook"></i></a>
                         </p>
                         <p>
-                          <a href="https://Twitter.com" target="_blank"></a>
+                          <a href="https://Twitter.com" target="_blank"> <i class="fab fa-twitter"></i></a>
                         </p>
                         <p>
-                          <a href="https://instagram.com" target="_blank"></a>
+                          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                         </p>
                     </div>
                 </div>
