Changed colour scheme

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,7 +17,10 @@
   <!-- Place favicon.ico in the root directory -->
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet"> 
+
   <!-- Font Awesome link-->
   <script src="https://kit.fontawesome.com/186639d764.js" crossorigin="anonymous"></script>
 
@@ -68,7 +71,7 @@
         <section class="map">
               <figure>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d525.2706951083571!2d-79.38209989615697!3d43.65254202482823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b34cc66e75af3%3A0xbf17db933edd1e!2sToronto%20Old%20City%20Hall!5e0!3m2!1sen!2sde!4v1628335802213!5m2!1sen!2sde" 
-                  width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  width="600" height="450" style="border:0" allowfullscreen></iframe>
               </figure>
         </section>
 
