--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
       <meta charset="utf-8">
-      <title></title>
+      <title>Unplugged Home</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,7 +17,10 @@
       <!-- Place favicon.ico in the root directory -->
 
       <!-- Google Fonts -->
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet"> 
+
       <!-- Font Awesome link-->
       <script src="https://kit.fontawesome.com/186639d764.js" crossorigin="anonymous"></script>
 
